--- a/hwsc-fe/package.json
+++ b/hwsc-fe/package.json
@@ -9,7 +9,11 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "dns": "^0.2.2",
     "jsonwebtoken": "^8.5.1",
+    "module": "^1.2.5",
+    "mongodb": "^3.3.2",
+    "net": "^1.0.2",
     "swiper": "^5.0.3",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
