--- a/hwsc-server/package.json
+++ b/hwsc-server/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^3.3.2"
+    "mongodb": "^3.3.2",
+    "vue-router": "^3.1.3"
   }
 }
